[package]
name = "onetutorial"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
dotenv = "0.15"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
clap = "3.0.0-beta.2"
csv = "1.1"
